[gd_scene load_steps=20 format=3 uid="uid://cw4gfeh6a6q"]

[ext_resource type="Script" path="res://Scripts/CameraManager.gd" id="1_bc8oj"]
[ext_resource type="Script" path="res://Scripts/Board.gd" id="1_tlai2"]
[ext_resource type="Texture2D" uid="uid://20ca42wlatc3" path="res://Assets/Samples/top_view_table.jpg" id="2_2fkrx"]
[ext_resource type="Texture2D" uid="uid://dhk4i3rlq307f" path="res://Assets/Backgrounds/cenario_1.png" id="3_gwk03"]
[ext_resource type="Texture2D" uid="uid://yougp415h2wo" path="res://Assets/CardImages/Sualk.png" id="4_pp5sr"]
[ext_resource type="Script" path="res://Scripts/CardManager.gd" id="5_bujgw"]
[ext_resource type="PackedScene" uid="uid://dewe1dk4fgioe" path="res://Scenes/Board/CardSlot.tscn" id="6_4qhqi"]
[ext_resource type="Script" path="res://Scripts/MagicCardSlot.gd" id="7_wn7ux"]
[ext_resource type="PackedScene" uid="uid://dcdo0hrqm40go" path="res://Scenes/Board/EnemyCardSlot.tscn" id="8_joibb"]
[ext_resource type="Script" path="res://Scripts/PlayerHand.gd" id="9_qj2x8"]
[ext_resource type="Script" path="res://Scripts/EnemyHand.gd" id="10_4bsbc"]
[ext_resource type="Script" path="res://Scripts/Deck.gd" id="11_isoi2"]
[ext_resource type="Texture2D" uid="uid://bdfpqf1xtchvl" path="res://Assets/CardLayout/card_back_brown.png" id="12_uhom8"]
[ext_resource type="Script" path="res://Scripts/InputManager.gd" id="13_t86q3"]
[ext_resource type="Script" path="res://Scripts/EnemyDeck.gd" id="14_y5boj"]
[ext_resource type="Texture2D" uid="uid://lj5jc72lxd00" path="res://Assets/CardLayout/card_back_purple.png" id="15_ppwgt"]
[ext_resource type="Script" path="res://Scripts/BattleManager.gd" id="16_eqcbv"]
[ext_resource type="Texture2D" uid="uid://ce6uq55hpok2l" path="res://Assets/Samples/CardSlot.png" id="17_j55us"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18f6k"]
size = Vector2(1413.33, 2006.67)

[node name="Board" type="Node2D"]
script = ExtResource("1_tlai2")

[node name="CameraManager" type="Node2D" parent="."]
script = ExtResource("1_bc8oj")

[node name="Background" type="Node2D" parent="."]

[node name="TopDown" type="Sprite2D" parent="Background"]
z_index = -4
position = Vector2(643.25, 358)
scale = Vector2(3.50817, 5.37226)
texture = ExtResource("2_2fkrx")

[node name="FrontView" type="Sprite2D" parent="Background"]
z_index = -5
position = Vector2(642.506, 358.5)
scale = Vector2(0.338681, 0.30875)
texture = ExtResource("3_gwk03")

[node name="Sualk" type="Sprite2D" parent="Background/FrontView"]
position = Vector2(137.28, -259.22)
scale = Vector2(0.383496, 0.401403)
texture = ExtResource("4_pp5sr")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("5_bujgw")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(640, 520)
scale = Vector2(0.45, 0.45)
script = ExtResource("7_wn7ux")

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(740, 520)
scale = Vector2(0.45, 0.45)
script = ExtResource("7_wn7ux")

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(540, 520)
scale = Vector2(0.45, 0.45)
script = ExtResource("7_wn7ux")

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(840, 520)
scale = Vector2(0.45, 0.45)
script = ExtResource("7_wn7ux")

[node name="CardSlot5" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(440, 520)
scale = Vector2(0.45, 0.45)
script = ExtResource("7_wn7ux")

[node name="CardSlot6" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(640, 388)
scale = Vector2(0.45, 0.45)

[node name="CardSlot7" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(740, 388)
scale = Vector2(0.45, 0.45)

[node name="CardSlot8" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(540, 388)
scale = Vector2(0.45, 0.45)

[node name="CardSlot9" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(840, 388)
scale = Vector2(0.45, 0.45)

[node name="CardSlot10" parent="CardSlots" instance=ExtResource("6_4qhqi")]
z_index = -3
position = Vector2(440, 388)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot1" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(640, 244)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot2" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(540, 244)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot3" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(440, 244)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot4" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(740, 244)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot5" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(840, 244)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot6" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(640, 113)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot7" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(540, 113)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot8" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(440, 113)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot9" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(740, 113)
scale = Vector2(0.45, 0.45)

[node name="EnemyCardSlot10" parent="CardSlots" instance=ExtResource("8_joibb")]
position = Vector2(840, 113)
scale = Vector2(0.45, 0.45)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("9_qj2x8")

[node name="EnemyHand" type="Node2D" parent="."]
script = ExtResource("10_4bsbc")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(80, 639)
scale = Vector2(0.07, 0.07)
script = ExtResource("11_isoi2")

[node name="DeckImage" type="Sprite2D" parent="Deck"]
z_index = -2
texture_filter = 4
texture = ExtResource("12_uhom8")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(26.6666, 10)
shape = SubResource("RectangleShape2D_18f6k")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
z_index = -2
offset_left = -114.286
offset_top = -171.429
offset_right = 285.714
offset_bottom = 301.568
theme_override_font_sizes/normal_font_size = 300
text = "0"

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("13_t86q3")

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 1100.0
offset_top = 500.0
offset_right = 1178.0
offset_bottom = 531.0
text = "End Turn"

[node name="EnemyDeck" type="Node2D" parent="."]
position = Vector2(1200, 100)
scale = Vector2(0.07, 0.07)
script = ExtResource("14_y5boj")

[node name="DeckImage" type="Sprite2D" parent="EnemyDeck"]
z_index = -2
texture = ExtResource("15_ppwgt")

[node name="RichTextLabel" type="RichTextLabel" parent="EnemyDeck"]
z_index = -2
offset_left = -57.143
offset_top = -228.571
offset_right = 335.857
offset_bottom = 261.429
theme_override_font_sizes/normal_font_size = 300
text = "0"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("16_eqcbv")

[node name="BattleTimer" type="Timer" parent="."]

[node name="PlayerHealth" type="RichTextLabel" parent="."]
offset_left = 130.0
offset_top = 430.0
offset_right = 170.0
offset_bottom = 470.0
scale = Vector2(2, 2)
text = "0"

[node name="EnemyHealth" type="RichTextLabel" parent="."]
offset_left = 130.0
offset_top = 230.0
offset_right = 170.0
offset_bottom = 270.0
scale = Vector2(2, 2)
text = "0"

[node name="PlayerDiscard" type="Node2D" parent="."]
position = Vector2(1000, 450)
scale = Vector2(0.45, 0.45)

[node name="Sprite2D" type="Sprite2D" parent="PlayerDiscard"]
texture = ExtResource("17_j55us")

[node name="EnemyDiscard" type="Node2D" parent="."]
position = Vector2(280, 180)
scale = Vector2(0.45, 0.45)

[node name="Sprite2D" type="Sprite2D" parent="EnemyDiscard"]
texture = ExtResource("17_j55us")

[connection signal="pressed" from="EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
